# Bangla-Speech2Text2Speech

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
bnsttts/: __init__.py  __main__.py  stt.py  tts.py  utils.py
configs/: config.yaml
notebook/: test_stt.ipynb  test_tts.ipynb
