[project]
name = "Bangla-Speech2Text2Speech"
version = "0.0.1"
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "HSAkash", email = "hemelakash472@gmail.com" },
]
description = "Bangla Speech to Text & Text to Speech."
keywords = ["stt", "tts", "bn"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]


dependencies = [
    "click",
    "gtts",
    "loguru",
    "librosa",
    "numpy==1.26.4",
    "nemo_toolkit[asr]",
    "pyprojroot",
    "python-box",
    "PyYAML"
]

[project.scripts]
bnsttts = "bnsttts.__main__:main"

[project.optional-dependencies]
cli-enhanced = ["rich"]
testing = ["pytest", "pytest-cov", "tox"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bnsttts"]  # Explicitly include only the main package

[tool.ruff]
select = ["E", "F", "W"]
exclude = [
  ".git",
  ".venv",
  "build",
]

[tool.pytest.ini_options]
timeout = 15
testpaths = ["tests"]
addopts = "--maxfail=3 --disable-warnings"

[project.urls]
Homepage = "https://github.com/HSAkash/Bangla-Speech2Text2Speech"
documentation = "https://github.com/HSAkash/Bangla-Speech2Text2Speech/wiki"
changelog = "https://github.com/HSAkash/Bangla-Speech2Text2Speech/releases"
bug_tracker = "https://github.com/HSAkash/Bangla-Speech2Text2Speech/issues"